--- a/_config.yml
+++ b/_config.yml
@@ -62,3 +62,5 @@ google_analytics:
 # The following settings are NECESSARY for the Prologue theme to run:
 remote_theme: jekyll-theme-prologue
 collections: [sections]
+
+theme: jekyll-theme-cayman
