Remove examples, Personalize the pages

--- a/_config.yml
+++ b/_config.yml
@@ -33,14 +33,14 @@
 title: James Black
 subtitle: Developer
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the demo site for a Jekyll theme version of
-  HTML5 UP's sleek, responsive site template Prologue.
+  This is my personal website that I use to show the
+  world what I am up to.
 author: James Black
 email: jblack144@gmail.com
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
-baseurl: "/jekyll-theme-prologue" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
 # Social settings
@@ -49,8 +49,8 @@ twitter_url:
 facebook_url:
 googleplus_url:
 instagram_url:
-linkedin_url:
-github_url:
+linkedin_url: https://www.linkedin.com/in/jamesrblack1/
+github_url: https://github.com/jamesblack3
 stackoverflow_url:
 pinterest_url:
 slack_url:
@@ -60,7 +60,5 @@ dribbble_url:
 google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
-remote_theme: jekyll-theme-prologue
+theme: jekyll-theme-prologue
 collections: [sections]
-
-theme: jekyll-theme-cayman
