--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ url: "" # the base hostname & protocol for your site
 
 # Social settings
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
-twitter_url: https://twitter.com/jblack144
+twitter_url:
 facebook_url:
 googleplus_url:
 instagram_url:
@@ -57,7 +57,7 @@ slack_url:
 dribbble_url:
 
 # Google Analytics Tracking ID goes here:
-google_analytics:
+google_analytics: G-FD5NTEN43R
 
 # The following settings are NECESSARY for the Prologue theme to run:
 theme: jekyll-theme-prologue
